@@ -100,7 +100,12 @@ typedef int HANDLE;
 
 #define ZGO(label__, val__)           \
   ({ __typeof__(val__) v__ = (val__); \
-    if (!v__) goto label__;          \
+    if (!v__) goto label__;           \
+    v__; })
+
+#define ZRET(ret__, val__)            \
+  ({ __typeof__(val__) v__ = (val__); \
+    if (!v__) return ret__;           \
     v__; })
 
 #ifdef __GNUC__
